grid searching with pipelines

--- a/Imputations_sklearn_1.ipynb
+++ b/Imputations_sklearn_1.ipynb
@@ -3729,11 +3729,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 169,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T16:05:15.874849Z",
-     "start_time": "2020-06-25T16:05:15.866847Z"
+     "end_time": "2020-06-26T12:52:26.106046Z",
+     "start_time": "2020-06-26T12:52:26.082323Z"
     }
    },
    "outputs": [
@@ -3743,7 +3743,7 @@
        "(37, 43)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3758,11 +3758,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 170,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-25T21:17:59.060056Z",
-     "start_time": "2020-06-25T21:17:59.049266Z"
+     "end_time": "2020-06-26T12:52:26.883372Z",
+     "start_time": "2020-06-26T12:52:26.873676Z"
     }
    },
    "outputs": [
@@ -3786,28 +3786,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 177,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-26T12:38:24.292412Z",
-     "start_time": "2020-06-26T12:38:24.237355Z"
+     "end_time": "2020-06-26T12:54:37.360239Z",
+     "start_time": "2020-06-26T12:54:37.355370Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-152-41ac0cbca1e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     steps=[\n\u001b[1;32m      6\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;34m\"imputer\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSimpleImputer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstrategy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"constant\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfill_value\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"MISSING\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;34m(\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     ]\n\u001b[1;32m      9\u001b[0m )\n",
-      "\u001b[0;32m~/anaconda3/envs/py36/lib/python3.6/site-packages/sklearn/pipeline.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, steps, memory, verbose)\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msteps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_steps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmemory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmemory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverbose\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/py36/lib/python3.6/site-packages/sklearn/pipeline.py\u001b[0m in \u001b[0;36m_validate_steps\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    166\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    167\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_validate_steps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 168\u001b[0;31m         \u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimators\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    169\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m         \u001b[0;31m# validate names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 0)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the preprocessing pipelines for both\n",
     "# numerical and categorical data\n",
@@ -3815,7 +3801,7 @@
     "numerical_transformer = Pipeline(\n",
     "    steps=[\n",
     "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
-    "        (\"onehot\", OneHotEncoder(handle_unknown=\"ignore\")),\n",
+    "        (\"scaler\", StandardScaler()),\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -3827,34 +3813,81 @@
     "    ]\n",
     ")\n",
     "\n",
-    "\n",
-    "preprocesor = ColumnTransformer(\n",
-    "    tranasformers=[\n",
-    "        (\"numercial\", numerical_transformer, f)\n",
+    "# putting them together in column transformer\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        (\"numerical\", numerical_transformer, features_numerical),\n",
+    "        (\"categorical\", categorical_transformer, features_categorical)\n",
     "    ]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 178,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:54:37.733622Z",
+     "start_time": "2020-06-26T12:54:37.730600Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# classifier\n",
+    "clf = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"preprocessor\", preprocessor),\n",
+    "        (\"classifier\", Lasso(max_iter=2000))\n",
+    "    ]\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 179,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:54:38.150883Z",
+     "start_time": "2020-06-26T12:54:38.147143Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# specifying the parameter space for gridsearch\n",
+    "\n",
+    "param_grid = {\n",
+    "    \"preprocessor__numerical__imputer__strategy\": [\"mean\", \"median\"],\n",
+    "    \"preprocessor__categorical__imputer__strategy\": [\"most_frequent\", \"constant\"],\n",
+    "    \"classifier__alpha\": [10, 100, 200],\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(clf, param_grid, cv=5, iid=False, n_jobs=-1, scoring=\"r2\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 180,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:54:42.995004Z",
+     "start_time": "2020-06-26T12:54:38.602137Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Linear Regression from grid_search: 0.933\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fit gridsearch\n",
+    "grid_search.fit(X=x_train, y=y_train)\n",
+    "\n",
+    "print(f\"Best Linear Regression from grid_search: {grid_search.score(x_train, y_train):.3f}\")"
+   ]
   },
   {
    "cell_type": "code",
