sklearn imputation complete

--- a/Imputations_sklearn_1.ipynb
+++ b/Imputations_sklearn_1.ipynb
@@ -3891,17 +3891,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 181,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:58:04.291271Z",
+     "start_time": "2020-06-26T12:58:04.287465Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'classifier__alpha': 100,\n",
+       " 'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       " 'preprocessor__numerical__imputer__strategy': 'median'}"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# getting best params\n",
+    "grid_search.best_params_"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 182,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:58:20.662071Z",
+     "start_time": "2020-06-26T12:58:20.631280Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('preprocessor',\n",
+       "                 ColumnTransformer(n_jobs=None, remainder='drop',\n",
+       "                                   sparse_threshold=0.3,\n",
+       "                                   transformer_weights=None,\n",
+       "                                   transformers=[('numerical',\n",
+       "                                                  Pipeline(memory=None,\n",
+       "                                                           steps=[('imputer',\n",
+       "                                                                   SimpleImputer(add_indicator=False,\n",
+       "                                                                                 copy=True,\n",
+       "                                                                                 fill_value=None,\n",
+       "                                                                                 missing_values=nan,\n",
+       "                                                                                 strategy='median',\n",
+       "                                                                                 verbose=0)),\n",
+       "                                                                  ('scaler',\n",
+       "                                                                   StandardScaler(copy=True,\n",
+       "                                                                                  wit...\n",
+       "                                                   'Foundation', 'BsmtQual',\n",
+       "                                                   'BsmtCond', 'BsmtExposure',\n",
+       "                                                   'BsmtFinType1',\n",
+       "                                                   'BsmtFinType2', 'Heating',\n",
+       "                                                   'HeatingQC', 'CentralAir',\n",
+       "                                                   'Electrical', ...])],\n",
+       "                                   verbose=False)),\n",
+       "                ('classifier',\n",
+       "                 Lasso(alpha=100, copy_X=True, fit_intercept=True,\n",
+       "                       max_iter=2000, normalize=False, positive=False,\n",
+       "                       precompute=False, random_state=None, selection='cyclic',\n",
+       "                       tol=0.0001, warm_start=False))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 182,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:59:12.059856Z",
+     "start_time": "2020-06-26T12:59:12.055357Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'classifier__alpha': 10,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 10,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'},\n",
+       " {'classifier__alpha': 10,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 10,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'},\n",
+       " {'classifier__alpha': 100,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 100,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'},\n",
+       " {'classifier__alpha': 100,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 100,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'},\n",
+       " {'classifier__alpha': 200,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 200,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'most_frequent',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'},\n",
+       " {'classifier__alpha': 200,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'mean'},\n",
+       " {'classifier__alpha': 200,\n",
+       "  'preprocessor__categorical__imputer__strategy': 'constant',\n",
+       "  'preprocessor__numerical__imputer__strategy': 'median'}]"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.cv_results_[\"params\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T12:59:30.923699Z",
+     "start_time": "2020-06-26T12:59:30.919760Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84746254, 0.84739594, 0.84813308, 0.84811361, 0.86624908,\n",
+       "       0.86621021, 0.86646905, 0.86651026, 0.86552764, 0.8654755 ,\n",
+       "       0.86525332, 0.86523746])"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.cv_results_['mean_test_score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T13:00:20.316514Z",
+     "start_time": "2020-06-26T13:00:20.297388Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Linear Regression from grid search 0.738\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Best Linear Regression from grid search {grid_search.score(x_test, y_test):.3f}\")"
+   ]
   },
   {
    "cell_type": "code",
