feature engine arbitary value

--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -776,6 +776,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-26T20:45:39.885291Z",
+     "start_time": "2020-06-26T20:45:39.880852Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
