arbitary value with pipeline

--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -767,23 +767,348 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Feature Engine - Arbitary Value Imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:14:43.097199Z",
+     "start_time": "2020-06-27T15:14:42.963865Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BsmtQual        object\n",
+       "FireplaceQu     object\n",
+       "LotFrontage    float64\n",
+       "MasVnrArea     float64\n",
+       "GarageYrBlt    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a selected group of variables\n",
+    "\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'LotFrontage', 'MasVnrArea', 'GarageYrBlt',\n",
+    "    'SalePrice'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "# first drop the target from the feature list\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "# split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "x_train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:15:22.255726Z",
+     "start_time": "2020-06-27T15:15:22.245455Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArbitraryNumberImputer(arbitrary_number=-999,\n",
+       "                       variables=['LotFrontage', 'MasVnrArea', 'GarageYrBlt'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer = mdi.ArbitraryNumberImputer(arbitrary_number=-999)\n",
+    "imputer.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:15:43.802280Z",
+     "start_time": "2020-06-27T15:15:43.798577Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['LotFrontage', 'MasVnrArea', 'GarageYrBlt'], -999)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.variables, imputer.arbitrary_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:16:16.309649Z",
+     "start_time": "2020-06-27T15:16:16.295061Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "64         Gd         NaN       -999.0       573.0       1998.0\n",
+       "682        Gd          Gd       -999.0         0.0       1996.0\n",
+       "960        TA         NaN         50.0         0.0       -999.0\n",
+       "1384       TA         NaN         60.0         0.0       1939.0\n",
+       "1100       TA         NaN         60.0         0.0       1930.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = imputer.transform(x_train)\n",
+    "tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:20:38.874442Z",
+     "start_time": "2020-06-27T15:20:38.866891Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using along with sklearn pipelines\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:20:52.057103Z",
+     "start_time": "2020-06-27T15:20:52.043145Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('imputer_999',\n",
+       "                 ArbitraryNumberImputer(arbitrary_number=-999,\n",
+       "                                        variables=['LotFrontage',\n",
+       "                                                   'MasVnrArea'])),\n",
+       "                ('imputer_minus1',\n",
+       "                 ArbitraryNumberImputer(arbitrary_number=-1,\n",
+       "                                        variables=['GarageYrBlt']))])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"imputer_999\", mdi.ArbitraryNumberImputer(arbitrary_number=-999, variables=['LotFrontage', 'MasVnrArea'])),\n",
+    "        (\"imputer_minus1\", mdi.ArbitraryNumberImputer(arbitrary_number=-1, variables=['GarageYrBlt']))\n",
+    "    ]\n",
+    ")\n",
+    "pipeline.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:21:23.479442Z",
+     "start_time": "2020-06-27T15:21:23.475750Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArbitraryNumberImputer(arbitrary_number=-999,\n",
+       "                       variables=['LotFrontage', 'MasVnrArea'])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.named_steps[\"imputer_999\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:21:35.935425Z",
+     "start_time": "2020-06-27T15:21:35.931555Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ArbitraryNumberImputer(arbitrary_number=-1, variables=['GarageYrBlt'])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.named_steps[\"imputer_minus1\"]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-26T20:45:39.885291Z",
-     "start_time": "2020-06-26T20:45:39.880852Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   },
   {
    "cell_type": "code",
