end of tail pipeline

--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -1103,11 +1103,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:22:20.904310Z",
+     "start_time": "2020-06-27T15:22:20.892647Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>-999.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "64         Gd         NaN       -999.0       573.0       1998.0\n",
+       "682        Gd          Gd       -999.0         0.0       1996.0\n",
+       "960        TA         NaN         50.0         0.0         -1.0\n",
+       "1384       TA         NaN         60.0         0.0       1939.0\n",
+       "1100       TA         NaN         60.0         0.0       1930.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# "
+    "# feature_engine returns a dataframe\n",
+    "tmp = pipeline.transform(x_train)\n",
+    "tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Engine - End of Tail Distribution Imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:27:55.291983Z",
+     "start_time": "2020-06-27T15:27:55.273713Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "BsmtQual        object\n",
+       "FireplaceQu     object\n",
+       "LotFrontage    float64\n",
+       "MasVnrArea     float64\n",
+       "GarageYrBlt    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a selected group of variables\n",
+    "\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'LotFrontage', 'MasVnrArea', 'GarageYrBlt',\n",
+    "    'SalePrice'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "# first drop the target from the feature list\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "# split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "x_train.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:31:45.056131Z",
+     "start_time": "2020-06-27T15:31:45.029159Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('imputer_skewed',\n",
+       "                 EndTailImputer(distribution='skewed',\n",
+       "                                variables=['GarageYrBlt', 'MasVnrArea'])),\n",
+       "                ('imputer_gaussian',\n",
+       "                 EndTailImputer(variables=['LotFrontage']))])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# end of tail distribution with grouped features and pipelines\n",
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"imputer_skewed\", mdi.EndTailImputer(distribution=\"skewed\", tail=\"right\", \n",
+    "                                              variables=['GarageYrBlt', 'MasVnrArea'])),\n",
+    "        (\"imputer_gaussian\", mdi.EndTailImputer(distribution=\"gaussian\", tail=\"right\",\n",
+    "                                               variables=[\"LotFrontage\"])),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "pipeline.fit(x_train)"
    ]
   },
   {
