--- a/feature_engine_imputations.ipynb
+++ b/feature_engine_imputations.ipynb
@@ -1309,6 +1309,311 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:31:57.360913Z",
+     "start_time": "2020-06-27T15:31:57.357145Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "EndTailImputer(distribution='skewed', variables=['GarageYrBlt', 'MasVnrArea'])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.named_steps[\"imputer_skewed\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:32:15.863473Z",
+     "start_time": "2020-06-27T15:32:15.852304Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BsmtQual</th>\n",
+       "      <th>FireplaceQu</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>GarageYrBlt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>138.90222</td>\n",
+       "      <td>573.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Gd</td>\n",
+       "      <td>Gd</td>\n",
+       "      <td>138.90222</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1996.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2121.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1384</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1100</th>\n",
+       "      <td>TA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60.00000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1930.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     BsmtQual FireplaceQu  LotFrontage  MasVnrArea  GarageYrBlt\n",
+       "64         Gd         NaN    138.90222       573.0       1998.0\n",
+       "682        Gd          Gd    138.90222         0.0       1996.0\n",
+       "960        TA         NaN     50.00000         0.0       2121.0\n",
+       "1384       TA         NaN     60.00000         0.0       1939.0\n",
+       "1100       TA         NaN     60.00000         0.0       1930.0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = pipeline.transform(x_train)\n",
+    "tmp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:32:48.555896Z",
+     "start_time": "2020-06-27T15:32:48.549794Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BsmtQual       0.023483\n",
+       "FireplaceQu    0.467710\n",
+       "LotFrontage    0.000000\n",
+       "MasVnrArea     0.000000\n",
+       "GarageYrBlt    0.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.isnull().mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Feature Engine - Frequent Category Imputation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:38:49.877940Z",
+     "start_time": "2020-06-27T15:38:49.859397Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1022, 5) (438, 5)\n",
+      "BsmtQual       0.023483\n",
+      "FireplaceQu    0.467710\n",
+      "LotFrontage    0.184932\n",
+      "MasVnrArea     0.004892\n",
+      "GarageYrBlt    0.052838\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let's load the dataset with a selected group of variables\n",
+    "\n",
+    "cols_to_use = [\n",
+    "    'BsmtQual', 'FireplaceQu', 'LotFrontage', 'MasVnrArea', 'GarageYrBlt',\n",
+    "    'SalePrice'\n",
+    "]\n",
+    "\n",
+    "data = pd.read_csv('data/housing.csv', usecols=cols_to_use)\n",
+    "\n",
+    "# let's separate into training and testing set\n",
+    "# first drop the target from the feature list\n",
+    "cols_to_use.remove('SalePrice')\n",
+    "# split\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    data[cols_to_use],\n",
+    "    data['SalePrice'],\n",
+    "    test_size=0.3,\n",
+    "    random_state=0\n",
+    ")\n",
+    "print(x_train.shape, x_test.shape)\n",
+    "x_train.dtypes\n",
+    "print(x_train.isnull().mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:39:04.644865Z",
+     "start_time": "2020-06-27T15:39:04.627622Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('numerical_imputer',\n",
+       "                 MeanMedianImputer(imputation_method='mean',\n",
+       "                                   variables=['LotFrontage', 'MasVnrArea',\n",
+       "                                              'GarageYrBlt'])),\n",
+       "                ('categorical_imputer',\n",
+       "                 CategoricalVariableImputer(imputation_method='frequent',\n",
+       "                                            variables=['BsmtQual',\n",
+       "                                                       'FireplaceQu']))])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Feature Engine automatically captures categorical/ numerical variables\n",
+    "\n",
+    "pipeline = Pipeline(\n",
+    "    steps=[\n",
+    "        (\"numerical_imputer\", mdi.MeanMedianImputer(imputation_method=\"mean\")),\n",
+    "        (\"categorical_imputer\", mdi.CategoricalVariableImputer(imputation_method=\"frequent\")),\n",
+    "    ]\n",
+    ")\n",
+    "pipeline.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:39:17.303855Z",
+     "start_time": "2020-06-27T15:39:17.299904Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MeanMedianImputer(imputation_method='mean',\n",
+       "                  variables=['LotFrontage', 'MasVnrArea', 'GarageYrBlt'])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.named_steps[\"numerical_imputer\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-27T15:39:27.004449Z",
+     "start_time": "2020-06-27T15:39:26.994651Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalVariableImputer(imputation_method='frequent',\n",
+       "                           variables=['BsmtQual', 'FireplaceQu'])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.named_steps[\"categorical_imputer\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
